Added hh-user tag handling

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -25,12 +25,12 @@
         </section>
         <footer itemscope="" itemtype="//schema.org/WPFooter">
             <div class="copyright">
-                &copy;<span itemprop="copyrightYear">2014</span>
-                <span itemprop="copyrightHolder" itemscope="" itemtype="//schema.org/Person">
+                Copyright &copy;<span itemprop="copyrightYear">2014</span>
+                <hh-user name="kenzal" itemprop="copyrightHolder" itemscope="" itemtype="//schema.org/Person">
                     J.
                     <span itemprop="givenName">Kenzal</span>
                     <span itemprop="familyName">Hunter</span>,
-                    Sr.</span>,
+                    Sr.</hh-user>,
                 All rights reserved.
             </div>
         </footer>
