--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -32,8 +32,7 @@
 
     <h3>This is your project's main page</h3>
 
-    <h3>Current User:</h3>
-    <?php Zend_Debug::dump($this->user); ?>
+    <h3>Current User: <hh-user name="kenzal"/></h3>
 
     <div id="more-information">
         <p><img src="http://framework.zend.com/images/PoweredBy_ZF_4LightBG.png" /></p>
