--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -25,7 +25,7 @@
         </section>
         <footer itemscope="" itemtype="//schema.org/WPFooter">
             <div class="copyright">
-                Copyright &copy;<span itemprop="copyrightYear">2014</span>
+                Copyright <span title="<?= APPLICATION_ENV ?>">&copy;</span><span itemprop="copyrightYear">2014</span>
                 <hh-user name="kenzal" itemprop="copyrightHolder" itemscope="" itemtype="//schema.org/Person">
                     J.
                     <span itemprop="givenName">Kenzal</span>
